# zad1-qt6-cpp20

./: .gitignore  CMakeLists.txt  main.cpp
